Updated to version 0.3.0 No major changes, just using LiquidCore 0.3.0 Cleaned up some lint warnings